pushing an update

--- a/about.html
+++ b/about.html
@@ -19,28 +19,27 @@
 <script src="movement.js"></script>
 <script src="js/anime.min.js"></script>
 
-<body>
+<body class="bg-near-white">
   <nav class="home container section">
     <a href="/">
       <!-- <img class="logo" src="logo.svg"> -->
       <div class="sunwithface"><img src="sasi.svg" /></div>
     </a>
     <div class="nav-items">
+      <a href="/projects.html" class="about">projects</a>
       <a href="/refracted.html" class="about">newsletter</a>
       <a href="/writing.html" class="about">writing</a>
       <a href="/about.html" class="about">about</a>
       <a href="/photos.html" class="about">photos</a>
       <a href="/codex-2020.html" class="about">codex</a>
-      <!-- <a href="writing.html" class="writing">writing</a> -->
-      <!-- <a href="/photos.html" class="writing">photos</a> -->
     </div>
   </nav>
   <div class="container">
-    <div class="pb2 section">
-      <div class="mw7 lh-copy project-body">
+    <div class="section">
+      <div class="lh-copy project-body">
         <div class="pb3 pb4-m pb2-l">
           <h2 class="f2 f1-m f1-l">About me</h2>
-          <img src="./photos/about-photos/me-alpes.png">
+          <img class="br4" src="./photos/about-photos/me-alpes.png">
           <p class="f5 f3-m f3-l">
             I was born in Sofia, Bulgaria - an interesting city, in an interesting country being a part of a very
             <i>specific</i> region of Europe. I was lucky enough to have an adventure-filled childhood full of bike
@@ -180,7 +179,7 @@
     </a>
     <p>Made with love and coffee in Sofia, 2020 </p>
     <div class="nav-items">
-      <a href="/writing.html" class="about"><span>📸</span>Instagram</a>
+      <a href="/writing.html" class=""><span>📸</span>Instagram</a>
       <a href="/about.html" class="about"><span>🐦</span>Twitter</a>
       <a href="/codex-2020.html" class="about"><span>🏀</span>Dribbble</a>
       <!-- <a href="writing.html" class="writing">writing</a> -->
