--- a/codex-2020.html
+++ b/codex-2020.html
@@ -36,6 +36,7 @@
             <div class="sunwithface"><img src="sasi.svg" /></div>
         </a>
         <div class="nav-items">
+            <a href="/projects.html" class="about">projects</a>
             <a href="/refracted.html" class="about">newsletter</a>
             <a href="/writing.html" class="about">writing</a>
             <a href="/about.html" class="about">about</a>
