--- a/writing.html
+++ b/writing.html
@@ -28,13 +28,14 @@
 <script src="movement.js"></script>
 <script src="js/anime.min.js"></script>
 
-<body>
+<body class="bg-near-white">
   <nav class="home container">
     <a href="/">
       <!-- <img class="logo" src="logo.svg"> -->
       <div class="sunwithface"><img src="sasi.svg" /></div>
     </a>
     <div class="nav-items">
+      <a href="/projects.html" class="about">projects</a>
       <a href="/refracted.html" class="about">newsletter</a>
       <a href="/writing.html" class="about">writing</a>
       <a href="/about.html" class="about">about</a>
@@ -78,7 +79,7 @@
         </div>
         <div class="test">
           <a class="no-underline color-inherit relative test" href="./blogposts/2019-recap.html">
-            <div class="mb3 tc tl-ns blogpost pa3 bg-gray br-gray db flex-m flex-l justify-between items-center">
+            <div class="mb3 tc tl-ns blogpost pa3 bg-white br4 db flex-m flex-l justify-between items-center">
               <h3 class="f3 f2-ns b dark-gray">
                 2019 year in review
               </h3>
@@ -89,7 +90,7 @@
         </div>
         <div class="test">
           <a class="no-underline color-inherit relative test" href="./blogposts/radio-check.html">
-            <div class="mb3 tc tl-ns blogpost pa3 bg-gray br-gray db flex-m flex-l justify-between items-center">
+            <div class="mb3 tc tl-ns blogpost pa3 bg-white br4 db flex-m flex-l justify-between items-center">
               <h3 class="f3 f2-ns b dark-gray">
                 Radio Check, Radio Check
               </h3>
@@ -100,7 +101,7 @@
         </div>
         <div class="test">
           <a class="no-underline color-inherit relative test" href="./blogposts/time.html">
-            <div class="mb3 tc tl-ns blogpost pa3 bg-gray br-gray db flex-m flex-l justify-between items-center">
+            <div class="mb3 tc tl-ns blogpost pa3 bg-white br4 db flex-m flex-l justify-between items-center">
               <h3 class="f3 f2-ns b dark-gray">Taking my time back</h3>
               <p class="f5">29 April 2019</p>
             </div>
@@ -109,7 +110,7 @@
         </div>
         <div class="test">
           <a class="no-underline color-inherit relative test" href="./blogposts/amsterdam.html">
-            <div class="mb3 tc tl-ns blogpost pa3 bg-gray br-gray db flex-m flex-l justify-between items-center">
+            <div class="mb3 tc tl-ns blogpost pa3 bg-white br4 db flex-m flex-l justify-between items-center">
               <h3 class="f3 f2-ns b dark-gray">
                 Letter for Amsterdam
               </h3>
@@ -120,7 +121,7 @@
         </div>
         <div class="test">
           <a class="no-underline color-inherit relative test" href="./blogposts/circle.html">
-            <div class="mb3 tc tl-ns blogpost pa3 bg-gray br-gray db flex-m flex-l justify-between items-center">
+            <div class="mb3 tc tl-ns blogpost pa3 bg-white br4 db flex-m flex-l justify-between items-center">
               <h3 class="f3 f2-ns b dark-gray">
                 A vicious, unforgiving circle
               </h3>
