--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <title>Alexander Traykov || Product Designer</title>
 </head>
 
-<body>
+<body class="bg-near-white">
   <!-- Nav  -->
   <nav class="home container anim1">
     <a href="/">
@@ -34,7 +34,7 @@
       <div class="sunwithface"><img src="sasi.svg" /></div>
     </a>
     <div class="nav-items">
-      <a href="/refracted.html" class="about">newsletter</a>
+      <a href="/projects.html" class="about">projects</a>
       <a href="/writing.html" class="about">writing</a>
       <a href="/about.html" class="about">about</a>
       <a href="/photos.html" class="about mobile-photos">photos</a>
@@ -46,130 +46,37 @@
   <div class="container">
     <!-- Video + Text -->
     <header class="main-header anim1">
-      <div class="info flex flex-center items-center">
+      <div class="info flex-center items-center">
         <!-- Info about me -->
-        <h1 class="main-heading tc">Alexander Traykov, product designer at <a href="https://www.toptal.com/"
-            class="main-heading toptal">Toptal</a>
-        </h1>
+        <p class="f4 f3-ns lh-copy">Hey there, I'm Alexander. I'm a dad, a designer, <a href="./writing.html"
+            target="_blank">writer</a> and
+          reader. Currently I'm helping develop the world of No-code at <a href="">Quickbase</a>
+        </p>
+        </br>
+        <p class="f4 f3-ns lh-copy"> Before Quickbase I was working as a
+          Bitcoin Designer at <a href="https://peakshift.com/" target="_blank">Peak Shift</a>
+        <p class="f4 f3-ns lh-copy"> Before Peak Shift, I was a part of the Core Product Design Team at <a
+            href="https://www.toptal.com/" target="_blank">Toptal</a>.</p>
+        <p class="f4 f3-ns lh-copy">
+          Before Toptal I was building the mobile products and design systems for <a
+            href="https://apps.apple.com/us/app/pr%C3%BCvit-pulse/id1097690467" target="_blank">Prüvit ↗</a> at <a
+            href="https://marketvision.com/" target="_blank">MarketVision ↗</a>.
+        </p>
+        <p class="f4 f3-ns lh-copy">
+          I tried to run my own newsletter called <a href="https://alexandertraykov.substack.com/"
+            target="_blank">Refracted</a>,
+          which is set
+          to explore
+          how design, technology and culture intertwine in our day-to-day lives. I have also created a bunch of
+          projects like <a href="./brewculator.html">Brewculator</a>, <a href="https://bgcreativesforua.com/"
+            target="_blank">Bulgarian
+            Creatives for Ukraine ↗</a>,
+          <a href="https://theimprovedmind.com/" target="_blank">The Improved Mind ↗</a> and <a
+            href="http://www.we-are.cc/" target="_blank">We Are
+            ↗</a>
+        </p>
       </div>
     </header>
-    <section class="section">
-      <div class="anim1">
-        <div class="pb3 section">
-          <div class="lh-copy project-body">
-            <div class="tc tl-m tl-l pt4-l bb mb3">
-              <h2 class="f3 f1-l">Projects</h2>
-              <p class="f4 f3-ns">
-                My digital works maintained by passion and filtered coffee
-              </p>
-            </div>
-            <div class="mt3 br-gray project anim1">
-              <a class="no-underline color-inherit relative test" href="brewculator.html">
-                <div class="mb3 tc tl-ns pa5 db flex-m flex-l justify-between items-center">
-                  <div>
-                    <h3 class="f3 f2-ns b dark-gray mb1">
-                      Brewculator
-                    </h3>
-                    <p class="mw6 f5 f4-ns mobile-copy">A number of ratios for popular brewing methods, fine control
-                      over its
-                      measuring units and general coffee brewing tips all together in one powerful coffee assistant.</p>
-                  </div>
-                  <img class="project-image" src="photos/brewculator/brewculator-circle-illustration.png">
-                </div>
-              </a>
-            </div>
-            <div class="mt3 br-gray project anim1">
-              <a class="no-underline color-inherit relative test" href="improvedmind.html">
-                <div class="mb3 tc tl-ns pa5 db flex-m flex-l justify-between items-center">
-                  <div>
-                    <h3 class="f3 f2-ns b dark-gray mb1">
-                      Theimprovedmind blog
-                    </h3>
-                    <p class="mw6 f5 f4-ns mobile-copy">Inspired through a series of discussions I created a blog that
-                      lists helpful
-                      information on the topic of meditation</p>
-                  </div>
-                  <img class="project-image" src="photos/circles-1.svg">
-                </div>
-              </a>
-            </div>
-            <!-- <div class="mt3 br-gray project anim1">
-              <a class="no-underline color-inherit relative test" href="weare.html">
-                <div class="mb3 tc tl-ns pa5 db flex-m flex-l justify-between items-center">
-                  <div class="">
-                    <h3 class="f3 f2-ns b dark-gray mb1">
-                      We-are Design
-                    </h3>
-                    <p class="mw6 f5 f4-ns mobile-copy">We-are interviews a mixture of popular designers and creatives from
-                      countries with underdeveloped communities, creating a locus where we exchange our personal and
-                      professional experience.</p>
-                  </div>
-                  <img class="project-image" src="photos/weare-photos/wearestamp.png">
-                </div>
-              </a>
-            </div> -->
-          </div>
-        </div>
-        <div class="pb3 section anim1">
-          <div class="lh-copy project-body">
-            <div class="tc tl-m tl-l pt4-l bb mb3">
-              <h2 class="f3 f1-l">Writing</h2>
-              <p class="f4 f3-ns">
-                Words on life, design and the mixture of both
-              </p>
-            </div>
-            <div class="test">
-              <a class="no-underline color-inherit relative test" href="./blogposts/2019-recap.html">
-                <div class="mb3 tc tl-ns blogpost pa3 bg-gray db flex-m flex-l justify-between items-center br-gray">
-                  <h3 class="f4 f2-ns b dark-gray">
-                    2019 year in review
-                  </h3>
-                  <p class="f5">04 January 2020</p>
-                </div>
-              </a>
-              <span class="snek f1"> 🎉🎉</span>
-            </div>
-            <div class="test">
-              <a class="no-underline color-inherit relative test" href="./blogposts/radio-check.html">
-                <div class="mb3 tc tl-ns blogpost pa3 bg-gray db flex-m flex-l justify-between items-center br-gray">
-                  <h3 class="f4 f2-ns b dark-gray">
-                    Radio Check, Radio Check
-                  </h3>
-                  <p class="f5">25 July 2019</p>
-                </div>
-              </a>
-              <img class="snek" src="photos/blog-photos/sunwithface2.png" alt="Amsterdam handrawn illustration" />
-            </div>
-            <div class="test">
-              <a class="no-underline color-inherit relative test" href="./blogposts/time.html">
-                <div class="mb3 tc tl-ns blogpost pa3 bg-gray db flex-m flex-l justify-between items-center br-gray">
-                  <h3 class="f4 f2-ns b dark-gray">Taking my time back</h3>
-                  <p class="f5">29 April 2019</p>
-                </div>
-              </a>
-              <img class="snek" src="./photos/writingposts-images/timeback.png" alt="Amsterdam handrawn illustration" />
-            </div>
-          </div>
-        </div>
-        <footer class="home container">
-          <a href="/">
-            <!-- <img class="logo" src="logo.svg"> -->
-            <h3 class="f4 b tc tl-ns">Alexander Traykov</h3 class="f3">
-          </a>
-          <p class="f5 tc tl-ns pb2 pb0-ns">Made with love and coffee in Sofia, 2020 </p>
-          <div class="nav-items">
-            <a href="https://www.instagram.com/alex.works/" class="about"><span>📸</span>Instagram</a>
-            <a href="https://twitter.com/alextraykov" class="about"><span>🐦</span>Twitter</a>
-            <a href="https://dribbble.com/alextraykoff" class="about"><span>🏀</span>Dribbble</a>
-            <!-- <a href="writing.html" class="writing">writing</a> -->
-            <!-- <a href="/photos.html" class="
-              writing">photos</a> -->
-          </div>
-        </footer>
-      </div>
-
-    </section>
-
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="js/charming.min.js"></script>
@@ -183,12 +90,25 @@
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
   <script src="https://unpkg.com/@barba/core"></script>
-
   <script>
     gsap.from('.full-width', { height: 0, opacity: 0, duration: 0.8, });
     gsap.to('.anim1', { opacity: 1, duration: 0.5, y: 30, stagger: 0.5, delay: 0.8, ease: 'back.easeInOut' })
     gsap.from('.content', { opacity: 0, y: -30, delay: 1.6 })
   </script>
 </body>
+<footer class="home container">
+  <a href="/">
+    <!-- <img class="logo" src="logo.svg"> -->
+    <h3 class="f4 b">AT</h3 class="f3">
+  </a>
+  <p>Made with love and coffee in Sofia, 2022 </p>
+  <div class="nav-items">
+    <a href="/writing.html" class="about"><span>📸</span>Instagram</a>
+    <a href="/about.html" class="about"><span>🐦</span>Twitter</a>
+    <a href="/codex-2020.html" class="about"><span>🏀</span>Dribbble</a>
+    <!-- <a href="writing.html" class="writing">writing</a> -->
+    <!-- <a href="/photos.html" class="writing">photos</a> -->
+  </div>
+</footer>
 
 </html>
