--- a/photos.html
+++ b/photos.html
@@ -28,13 +28,14 @@
 <script src="movement.js"></script>
 <script src="js/anime.min.js"></script>
 
-<body>
-    <nav class="home container">
+<body class="bg-near-white">
+    <nav class="home container anim1">
         <a href="/">
             <!-- <img class="logo" src="logo.svg"> -->
             <div class="sunwithface"><img src="sasi.svg" /></div>
         </a>
         <div class="nav-items">
+            <a href="/projects.html" class="about">projects</a>
             <a href="/refracted.html" class="about">newsletter</a>
             <a href="/writing.html" class="about">writing</a>
             <a href="/about.html" class="about">about</a>
@@ -44,7 +45,7 @@
             <!-- <a href="/photos.html" class="writing">photos</a> -->
         </div>
     </nav>
-    <div class="container">
+    <div class="container anim1">
         <div class="">
             <div class="pt5 bb mb3">
                 <h1>Photos</h1>
@@ -390,6 +391,7 @@
             </a>
             <p class="f5 tc tl-ns pb2 pb0-ns">Made with love and coffee in Sofia, 2020 </p>
             <div class="nav-items">
+
                 <a href="https://www.instagram.com/alex.works/" class="about"><span>📸</span>Instagram</a>
                 <a href="https://twitter.com/alextraykov" class="about"><span>🐦</span>Twitter</a>
                 <a href="https://dribbble.com/alextraykoff" class="about"><span>🏀</span>Dribbble</a>
@@ -415,5 +417,13 @@
             });
         </script>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
+<script src="https://unpkg.com/@barba/core"></script>
+
+<script>
+    gsap.from('.full-width', { height: 0, opacity: 0, duration: 0.8, });
+    gsap.to('.anim1', { opacity: 1, duration: 0.5, y: 30, stagger: 0.5, delay: 0.8, ease: 'back.easeInOut' })
+    gsap.from('.content', { opacity: 0, y: -30, delay: 1.6 })
+</script>
 
 </html>
