--- a/refracted.html
+++ b/refracted.html
@@ -31,6 +31,7 @@
                 <div class="sunwithface"><img src="/sasi.svg" /></div>
             </a>
             <div class="nav-items">
+                <a href="/projects.html" class="about">projects</a>
                 <a href="/refracted.html" class="about">newsletter</a>
                 <a href="/writing.html" class="about">writing</a>
                 <a href="/about.html" class="about">about</a>
