--- a/writing.html
+++ b/writing.html
@@ -36,11 +36,10 @@
     </a>
     <div class="nav-items">
       <a href="/projects.html" class="about">projects</a>
-      <a href="/refracted.html" class="about">newsletter</a>
       <a href="/writing.html" class="about">writing</a>
       <a href="/about.html" class="about">about</a>
-      <a href="/photos.html" class="about">photos</a>
-      <a href="/codex-2020.html" class="about">codex</a>
+      <a href="/photos.html" class="about mobile-photos">photos</a>
+      <a href="/codex-2022.html" class="about codex">codex</a>
       <!-- <a href="writing.html" class="writing">writing</a> -->
       <!-- <a href="/photos.html" class="writing">photos</a> -->
     </div>
