updated layout and about page

--- a/about.html
+++ b/about.html
@@ -37,50 +37,71 @@
   </nav>
   <div class="container">
     <div class="section">
+      <!-- About Me -->
       <div class="lh-copy project-body">
-        <div class="pb3 pb4-m pb2-l">
+        <div class="pb3 pb4-m pb2-l mb5e">
           <h2 class="f2 f1-m f1-l">About me</h2>
           <img class="br4" src="./photos/about-photos/me-alpes.png">
-          <p class="f5 f3-m f3-l">
-            I was born in Sofia, Bulgaria - an interesting city, in an interesting country being a part of a very
-            <i>specific</i> region of Europe. I was lucky enough to have an adventure-filled childhood full of bike
-            rides, tree climbing, comic book drawing and being genuinely mischievous.
-            In my teens, I was extraordinarily good at Call of Duty, was listening to angsty music, had greesy long hair
-            and I discovered the world of design. I cut the hair, cut the angsty music, yet did not cut my passion for
-            design. Hence why I'm still pushing pixels with love and passion.
-
+          <p class="f5 f3-m f3-l pb3">
+            Hey there, friend. I'm Alex, and I am a: dad, husband, son, brother, designer, writer and martial artist.
           </p>
-          <p class="f5 f3-m f3-l">Today, I'm living with my best friend, which happens to be my <span
-              class="strike gray">fiancee</span> <span class="b">wife</span> as well. We're surrounded by our 75 plants
-            and
-            in our household, I'm the one responsible for brewing our coffee and taking the film photos. In my spare
-            time, I aim to spend more time in nature. Either I hike, walk around in the local forests or shred some
-            trails with my mountain bike, I thoroughly enjoy the smell of pines and leaves around me. When I'm at home,
-            I usually lift weights, read, write and really focus on the craft of coffee brewing.</p>
+          <p class="f5 f3-m f3-l pb3">
+            In my personal life, I am an extroverted, warm-hearteD dude who loves philosophy, nature, animals and
+            martial arts. You can catch me rolling on the mats in my jiujitsu gym, shredding trails on my bike in the
+            nearby forests or walking around with my wife and my emotionally unstable chihuahua around Sofia.
+          </p>
+          <p class="f5 f3-m f3-l pb3">
+            And while on the topic of wife, I consider myself a fortunate person, primarily because seven years ago, I
+            met my best friend, Diana, which I married in 2020. In May 2022, we were blessed with our baby daughter, the
+            light of our lives. We live and work in our cosy home, surrounded by plants and our memorabilia.
+          </p>
         </div>
-        <h2 class="f3 f1-m f1-l b bb">Let's connect</h2>
-        <div class="section db"><a class="db f4 f3-ns" href="https://twitter.com/alextraykov"><span>🐦</span>Twitter</a>
-          <a class="db f4 f3-ns" href="https://dribbble.com/alextraykoff"><span>🏀</span>Dribbble</a>
-          <a class="f4 f3-ns db" href="https://www.instagram.com/alex.works/"><span>📸</span>Instagram</a>
-          <a class="db f4 f3-ns no-underline black" href=""><span>🎮</span>Activison account: polecatsky#6353045</a>
+        <div class="mb5">
+          <h2 class="f3 f1-m f1-l b bb">Let's connect</h2>
+          <div class="section db"><a class="db f4 f3-ns"
+              href="https://twitter.com/alextraykov"><span>🐦</span>Twitter</a>
+            <a class="db f4 f3-ns" href="https://dribbble.com/alextraykoff"><span>🏀</span>Dribbble</a>
+            <a class="f4 f3-ns db" href="https://www.instagram.com/alex.works/"><span>📸</span>Instagram</a>
+            <a class="db f4 f3-ns no-underline black" href=""><span>🎮</span>Activison account: polecatsky#6353045</a>
+          </div>
         </div>
-        <h2 class="f3 f1-m f1-l b bb">Work experience</h2>
+        <h2 class="f3 f1-m f1-l b bb mb3">Work experience</h2>
         <!-- <a class="no-underline" href="resume.pdf" target="_blank">
           <p class="f3">Check my resume 📜</p>
         </a> -->
         <!-- Work item -->
-        <div class="pb3 section">
-          <div class="db bb b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
+        <div class="pb3 section mb4">
+          <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
+            <h3 class="f3 f2-m f2-l b">Quickbase</h3>
+            <p class="dark-gray">July 2022 - Present</p>
+          </div>
+          <p class="f5 f4-m f4-l lh-copy">
+            Working as a Senior Product Desginer on TBD 🤐
+          </p>
+        </div>
+        <div class="pb3 section mb4">
+          <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
+            <h3 class="f3 f2-m f2-l b">PeakShift</h3>
+            <p class="dark-gray">January 2022 - June 2022</p>
+          </div>
+          <p class="f5 f4-m f4-l lh-copy">
+            Working as a Senior Product Desginer responsible for laying out the foundations of the hiring, design
+            research and design marketing processes. Worked on <a href="">bolt.fun</a> , <a href="">Alby</a>, and <a
+              href="">BTC Payer</a>.
+          </p>
+        </div>
+        <div class="pb3 section mb4">
+          <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
             <h3 class="f3 f2-m f2-l b">Toptal</h3>
-            <p class="dark-gray">April 2019 - Present</p>
+            <p class="dark-gray">April 2019 - January 2022</p>
           </div>
           <p class="f5 f4-m f4-l lh-copy">
             Working as a Product Desginer responsible for the Staff Experience and Internal tool for Toptal staff.
           </p>
         </div>
         <!-- Work item -->
-        <div class="pb3 section">
-          <div class="db bb b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
+        <div class="pb3 section mb4">
+          <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
             <h3 class="f3 f2-m f2-l b">MarketVision Consulting Group</h3>
             <p class="dark-gray">August 2018 - April 2019</p>
           </div>
@@ -93,8 +114,8 @@
           </p>
         </div>
         <!-- Work item -->
-        <div class="pb3 section">
-          <div class="db bb b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
+        <div class="pb3 section mb4">
+          <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
             <h2 class="f3 f2-m f2-l b">eAssist</h2>
             <p class="dark-gray">January 2018 - August 2018</p>
           </div>
@@ -105,8 +126,8 @@
             complex dashboard designs and marketing-driven websites. </p>
         </div>
         <!-- Work item -->
-        <div class="pb3 section">
-          <div class="db bb b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
+        <div class="pb3 section mb4">
+          <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
             <h3 class="f3 f2-m f2-l b">Pruvit</h3>
             <p class="dark-gray">May 2017 - Present</p>
           </div>
@@ -119,8 +140,8 @@
           </p>
         </div>
         <!-- Work item -->
-        <div class="pb3 section">
-          <div class="db bb b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
+        <div class="pb3 section mb4">
+          <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
             <h3 class="f3 f2-m f2-l b">Canbrowser</h3>
             <p class="dark-gray">Apr 2017 - April 2018</p>
           </div>
@@ -132,8 +153,8 @@
           </p>
         </div>
         <!-- Work item -->
-        <div class="pb3 section">
-          <div class="db bb b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
+        <div class="pb3 section mb4">
+          <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
             <h3 class="f3 f2-m f2-l b">Noxious.one</h3>
             <p class="dark-gray">Juy 2016 - November 2016</p>
           </div>
@@ -144,8 +165,8 @@
           </p>
         </div>
         <!-- Work item -->
-        <div class="pb3 section">
-          <div class="db bb b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
+        <div class="pb3 section mb4">
+          <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
             <h3 class="f3 f2-m f2-l b">Kickflip</h3>
             <p class="dark-gray">August 2015 - December 2015</p>
           </div>
@@ -157,8 +178,8 @@
           </p>
         </div>
         <!-- Work item -->
-        <div class="pb3 section">
-          <div class="db bb b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
+        <div class="pb3 section mb4">
+          <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
             <h3 class="f3 f2-m f2-l b">Stenik</h3>
             <p class="dark-gray">December 2014 - April 2015</p>
           </div>
@@ -176,13 +197,13 @@
   <footer class="home container">
     <a href="/">
       <!-- <img class="logo" src="logo.svg"> -->
-      <h3 class="f4 b">Alexander Traykov</h3 class="f3">
+      <h3 class="f4 b">AT</h3 class="f3">
     </a>
-    <p>Made with love and coffee in Sofia, 2020 </p>
+    <p>Made with love and coffee in Sofia, 2022 </p>
     <div class="nav-items">
-      <a href="/writing.html" class=""><span>📸</span>Instagram</a>
-      <a href="/about.html" class="about"><span>🐦</span>Twitter</a>
-      <a href="/codex-2020.html" class="about"><span>🏀</span>Dribbble</a>
+      <a href="https://www.instagram.com/alex.works/" class="about"><span>📸</span>Instagram</a>
+      <a href="https://twitter.com/alextraykov" class="about"><span>🐦</span>Twitter</a>
+      <a href="https://dribbble.com/alextraykov" class="about"><span>🏀</span>Dribbble</a>
       <!-- <a href="writing.html" class="writing">writing</a> -->
       <!-- <a href="/photos.html" class="writing">photos</a> -->
     </div>
