--- a/index.html
+++ b/index.html
@@ -55,13 +55,16 @@
         </br>
         <p class="f4 f3-ns lh-copy"> Before Quickbase I was working as a
           Bitcoin Designer at <a href="https://peakshift.com/" target="_blank">Peak Shift</a>
+          </br>
         <p class="f4 f3-ns lh-copy"> Before Peak Shift, I was a part of the Core Product Design Team at <a
             href="https://www.toptal.com/" target="_blank">Toptal</a>.</p>
+        </br>
         <p class="f4 f3-ns lh-copy">
           Before Toptal I was building the mobile products and design systems for <a
             href="https://apps.apple.com/us/app/pr%C3%BCvit-pulse/id1097690467" target="_blank">Prüvit ↗</a> at <a
             href="https://marketvision.com/" target="_blank">MarketVision ↗</a>.
         </p>
+        </br>
         <p class="f4 f3-ns lh-copy">
           I tried to run my own newsletter called <a href="https://alexandertraykov.substack.com/"
             target="_blank">Refracted</a>,
@@ -103,9 +106,9 @@
   </a>
   <p>Made with love and coffee in Sofia, 2022 </p>
   <div class="nav-items">
-    <a href="/writing.html" class="about"><span>📸</span>Instagram</a>
-    <a href="/about.html" class="about"><span>🐦</span>Twitter</a>
-    <a href="/codex-2020.html" class="about"><span>🏀</span>Dribbble</a>
+    <a href="https://www.instagram.com/alex.works/" class="about"><span>📸</span>Instagram</a>
+    <a href="https://twitter.com/alextraykov" class="about"><span>🐦</span>Twitter</a>
+    <a href="https://dribbble.com/alextraykov" class="about"><span>🏀</span>Dribbble</a>
     <!-- <a href="writing.html" class="writing">writing</a> -->
     <!-- <a href="/photos.html" class="writing">photos</a> -->
   </div>
