--- a/photos.html
+++ b/photos.html
@@ -383,17 +383,16 @@
 
             </div>
         </div>
-        <footer class="home">
+        <footer class="home container">
             <a href="/">
                 <!-- <img class="logo" src="logo.svg"> -->
-                <h3 class="f4 b tc tl-ns">Alexander Traykov</h3 class="f3">
+                <h3 class="f4 b">AT</h3 class="f3">
             </a>
-            <p class="f5 tc tl-ns pb2 pb0-ns">Made with love and coffee in Sofia, 2020 </p>
+            <p>Made with love and coffee in Sofia, 2022 </p>
             <div class="nav-items">
-
                 <a href="https://www.instagram.com/alex.works/" class="about"><span>📸</span>Instagram</a>
                 <a href="https://twitter.com/alextraykov" class="about"><span>🐦</span>Twitter</a>
-                <a href="https://dribbble.com/alextraykoff" class="about"><span>🏀</span>Dribbble</a>
+                <a href="https://dribbble.com/alextraykov" class="about"><span>🏀</span>Dribbble</a>
                 <!-- <a href="writing.html" class="writing">writing</a> -->
                 <!-- <a href="/photos.html" class="writing">photos</a> -->
             </div>
