--- a/projects.html
+++ b/projects.html
@@ -47,17 +47,17 @@
             <div class="pb3 section">
                 <div class="lh-copy project-body">
                     <div class="tc tl-m tl-l pt4-l mb3">
-                        <h2 class="f3 f1-l">Work Projects</h2>
+                        <h2 class="f3 f1-l">Worked on</h2>
                         <p class="f4 f3-ns">
-                            My digital works maintained by passion and filtered coffee
+                            Some projects I've worked on while fueled by filtered coffee
                         </p>
                     </div>
                     <div class="mt3 br4 anim1 bg-white">
-                        <a class="no-underline color-inherit relative test" href="/bolt-fun.html">
+                        <a class="no-underline color-inherit relative test" href="https://makers.bolt.fun/projects">
                             <div class="mb3 tc tl-ns pa4 db flex-m flex-l justify-between">
                                 <div>
                                     <h3 class="f3 f2-ns b dark-gray mb1">
-                                        Bolt.Fun
+                                        Bolt.fun
                                     </h3>
                                 </div>
                             </div>
@@ -65,7 +65,7 @@
                     </div>
 
                     <div class="mt3 br4 anim1 bg-white">
-                        <a class="no-underline color-inherit relative test" href="weare.html">
+                        <a class="no-underline color-inherit relative test" href="https://getalby.com/">
                             <div class="mb3 tc tl-ns pa4 db flex-m flex-l justify-between items-center">
                                 <div class="">
                                     <h3 class="f3 f2-ns b dark-gray mb1">
@@ -121,18 +121,18 @@
             <footer class="home container">
                 <a href="/">
                     <!-- <img class="logo" src="logo.svg"> -->
-                    <h3 class="f4 b tc tl-ns">Alexander Traykov</h3 class="f3">
+                    <h3 class="f4 b">AT</h3 class="f3">
                 </a>
-                <p class="f5 tc tl-ns pb2 pb0-ns">Made with love and coffee in Sofia, 2020 </p>
+                <p>Made with love and coffee in Sofia, 2022 </p>
                 <div class="nav-items">
                     <a href="https://www.instagram.com/alex.works/" class="about"><span>📸</span>Instagram</a>
                     <a href="https://twitter.com/alextraykov" class="about"><span>🐦</span>Twitter</a>
-                    <a href="https://dribbble.com/alextraykoff" class="about"><span>🏀</span>Dribbble</a>
+                    <a href="/codex-2020.html" class="about"><span>🏀</span>Dribbble</a>
                     <!-- <a href="writing.html" class="writing">writing</a> -->
-                    <!-- <a href="/photos.html" class="
-                writing">photos</a> -->
+                    <!-- <a href="/photos.html" class="writing">photos</a> -->
                 </div>
             </footer>
+
         </div>
 
     </section>
@@ -140,6 +140,23 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
 <script src="https://unpkg.com/@barba/core"></script>
 
+<script>
+    gsap.from('.full-width', { height: 0, opacity: 0, duration: 0.8, });
+    gsap.to('.anim1', { opacity: 1, duration: 0.5, y: 30, stagger: 0.5, delay: 0.8, ease: 'back.easeInOut' })
+    gsap.from('.content', { opacity: 0, y: -30, delay: 1.6 })
+</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+<script src="js/charming.min.js"></script>
+<script src="js/imagesloaded.pkgd.min.js"></script>
+<script src="js/TweenMax.min.js"></script>
+<script src="js/demo.js"></script>
+<script>
+    $(document).ready(function () {
+        $('.homepage-vid').show();
+    });
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
+<script src="https://unpkg.com/@barba/core"></script>
 <script>
     gsap.from('.full-width', { height: 0, opacity: 0, duration: 0.8, });
     gsap.to('.anim1', { opacity: 1, duration: 0.5, y: 30, stagger: 0.5, delay: 0.8, ease: 'back.easeInOut' })
