--- a/about.html
+++ b/about.html
@@ -46,9 +46,9 @@
             Hey there, friend. I'm Alex, and I am a: dad, husband, son, brother, designer, writer and martial artist.
           </p>
           <p class="f5 f3-m f3-l pb3">
-            In my personal life, I am an extroverted, warm-hearteD dude who loves philosophy, nature, animals and
+            In my personal life, I am an extroverted, warm-hearted dude who loves philosophy, nature, animals and
             martial arts. You can catch me rolling on the mats in my jiujitsu gym, shredding trails on my bike in the
-            nearby forests or walking around with my wife and my emotionally unstable chihuahua around Sofia.
+            nearby forests or walking around the city with my wife and my emotionally unstable chihuahua.
           </p>
           <p class="f5 f3-m f3-l pb3">
             And while on the topic of wife, I consider myself a fortunate person, primarily because seven years ago, I
