updated codex and index

--- a/codex-2022.html
+++ b/codex-2022.html
@@ -72,16 +72,16 @@
                 <div class="mb3 hover bl bw2 b--orange pa3 bg-white flex">
                     <p class="f5 dark-gray">I will be grateful for each day of my life.</p>
                 </div>
-                <!-- rule -->
                 <div class="mb3 hover bl bw2 b--orange pa3 bg-white flex">
-                    <p class="f5 dark-gray">I will be
-                        honest and
-                        direct.
-                    </p>
+                    <p class="f5 dark-gray">I will do what needs to be done, not what I want to do.</p>
+                </div>
+                <div class="mb3 hover bl bw2 b--orange pa3 bg-white flex">
+                    <p class="f5 dark-gray">Rather than feeling guilt, I'll take responsibility.</p>
                 </div>
                 <!-- rule -->
                 <div class="mb3 hover bl bw2 b--orange pa3 bg-white flex">
-                    <p class="f5 dark-gray">I will never self-pity myself.</p>
+                    <p class="f5 dark-gray">I will be honest anddirect.
+                    </p>
                 </div>
                 <!-- rule -->
                 <div class="mb3 hover bl bw2 b--orange pa3 bg-white flex">
@@ -98,7 +98,7 @@
                     </p>
                 </div>
                 <div class="mb3 hover bl bw2 b--green pa3 bg-white flex">
-                    <p class="f5 dark-gray">Movement is healing.
+                    <p class="f5 dark-gray">Movement is health.
                     </p>
                 </div>
                 <div class="mb3 hover bl bw2 b--green pa3 bg-white flex">
@@ -107,6 +107,10 @@
                 </div>
                 <h3 class="f3 pb3" id="mental-health">Mental Health
                 </h3>
+                <div class="mb3 hover bl bw2 b--light-purple pa3 bg-white flex">
+                    <p class="f5 dark-gray">Psychotheraphy is crucial for one's healing.
+                    </p>
+                </div>
                 <div class="mb3 hover bl bw2 b--light-purple pa3 bg-white flex">
                     <p class="f5 dark-gray">Self-desception and wishful thinking degrade one's mind.
                     </p>
@@ -118,8 +122,7 @@
                 <h3 class="f3 pb3" id="relationships">Relationships</h3>
                 <div class="mb3 hover bl bw2 b--light-pink pa3 bg-white flex">
                     <p class="f5 dark-gray">Relationships are like muscle fibre – once broken, they could heal, but
-                        they'll
-                        never going to be as strong.
+                        they'll never going to be as strong.
                     </p>
                 </div>
                 <div class="mb3 hover bl bw2 b--light-pink pa3 bg-white flex">
@@ -133,15 +136,15 @@
                 </div>
                 <div class="mb3 hover bl bw2 b--light-pink pa3 bg-white flex">
                     <p class="f5 dark-gray">
+                        Don't take the love of your close ones for granted.
+                    </p>
+                </div>
+                <div class="mb3 hover bl bw2 b--light-pink pa3 bg-white flex">
+                    <p class="f5 dark-gray">
                         Appreciate the sacrifices done for yourself.
                     </p>
                 </div>
                 <h3 class="f3 pb3" id="everyday-life">Everyday life</h3>
-                <div class="mb3 hover bl bw2 b--navy pa3 bg-white flex">
-                    <p class="f5 dark-gray">
-                        Aim to help the elderly.
-                    </p>
-                </div>
                 <div class="mb3 hover bl bw2 b--navy pa3 bg-white flex">
                     <p class="f5 dark-gray">
                         If your able to save the life of an animal – do so.
