--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       <div class="info flex-center items-center">
         <!-- Info about me -->
         <p class="f4 f3-ns lh-copy">Hey there, I'm Alexander. I'm a dad, a designer, <a href="./writing.html"
-            target="_blank">writer</a> and
-          reader. Currently I'm helping develop the world of No-code at <a href="">Quickbase</a>
+            target="_blank">I write</a> and
+          sometimes I even read. Currently I'm helping develop the world of No-code at <a href="">Quickbase</a>
         </p>
         </br>
         <p class="f4 f3-ns lh-copy"> Before Quickbase I was working as a
